Header always on TOP, editors's preferences has no effect. #61136

Closed
opened 2019-02-02 14:12:50 +01:00 by Domenico · 8 comments

System Information
Operating system: Win10
Graphics card: R9 390

Blender Version
Broken: 2.80, 4ef09cf937, 2019-02-02

Short description of error

The header remain on TOP of the screen even if select BOTTOM from the interface, editors preferences.

Exact steps for others to reproduce the error

Open blender, go to EDIT ---> PREFERENCES ----> INTERFACE ------> EDITORS and select BOTTOM as header position, save preferences, close blender and reopen it, the header remains on top

**System Information** Operating system: Win10 Graphics card: R9 390 **Blender Version** Broken: 2.80, 4ef09cf937f2, 2019-02-02 **Short description of error** The header remain on TOP of the screen even if select BOTTOM from the interface, editors preferences. **Exact steps for others to reproduce the error** Open blender, go to EDIT ---> PREFERENCES ----> INTERFACE ------> EDITORS and select BOTTOM as header position, save preferences, close blender and reopen it, the header remains on top
Author

Added subscriber: @DominickManuli

Added subscriber: @DominickManuli
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I'm not sure if this really is a bug. The header alignment is stored in the file afaik. Also when a new space is created, the alignment is synchronized with the previous space that was at that position.
Maybe this option should just be removed or more fine grained control is necessary (e.g. an option for the default for every space type, which is not synchronized with other space types then).

I'm not sure if this really is a bug. The header alignment is stored in the file afaik. Also when a new space is created, the alignment is synchronized with the previous space that was at that position. Maybe this option should just be removed or more fine grained control is necessary (e.g. an option for the default for every space type, which is not synchronized with other space types then).

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

IMO this option should just be removed. It serves no real practical purpose. The header position is stored in the file anyway, and when you create a new editor, the previous editor is copied.

IMO this option should just be removed. It serves no real practical purpose. The header position is stored in the file anyway, and when you create a new editor, the previous editor is copied.
Jacques Lucke self-assigned this 2019-02-04 12:45:55 +01:00
Member

I'll make a diff.

I'll make a diff.

This issue was referenced by afd4bf8694

This issue was referenced by afd4bf869498782a56304cd127192161a0a40996

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61136
No description provided.