Fix T61136: Header alignment preference has no effect

Users expect this to apply to existing files,
adjust this to apply on load, defaults to off.