source/blender/makesdna/DNA_userdef_types.h
@@ -872,7 +872,8 @@ typedef enum eUserpref_UI_Flag {
 	USER_PLAINMENUS             = (1 << 5),
 	USER_LOCK_CURSOR_ADJUST     = (1 << 6),
 	USER_HEADER_BOTTOM          = (1 << 7),
-	USER_UIFLAG_DEPRECATED_8    = (1 << 8),  /* cleared */
+	/** Otherwise use header alignment from the file. */
+	USER_HEADER_FROM_PREF       = (1 << 8),
 	USER_MENUOPENAUTO           = (1 << 9),
 	USER_DEPTH_CURSOR           = (1 << 10),
 	USER_AUTOPERSP              = (1 << 11),
