release/scripts/startup/bl_ui/space_userpref.py
@@ -210,7 +210,7 @@ class USERPREF_PT_interface_editors(PreferencePanel):
 
         flow = layout.grid_flow(row_major=False, columns=0, even_columns=True, even_rows=False, align=False)
 
-        flow.row().prop(view, "header_align_default", expand=True)
+        flow.row().prop(view, "header_align")
         flow.prop(system, "use_region_overlap")
         flow.prop(view, "show_layout_ui", text="Corner Splitting")
         flow.prop(view, "color_picker_type")
